Fix tmux for new systems

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,6 +1,21 @@
+if-shell '[[ -n $DBUS_SESSION_BUS_ADDRESS ]]' {
+    # Prevent systemd-oomd from killing the whole tmux server when
+    # a process uses too much memory.
+    set-option -g default-command "systemd-run --user --scope ${SHELL}"
+}
 
-# !!! Prevent systemd-oomd from killing the whole tmux server when process uses too much memory.
-set-option -g default-command 'systemd-run --user --scope zsh'
+if-shell '[[ ! -e $HOME/.tmux/plugins/tpm ]]' {
+    display-message "
+    =====================================================================
+    ⚠️ TPM (tmux plugin manager) is not installed ⚠️
+
+        git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+
+       ~/.tmux/plugins/tpm/bin/install_plugins
+
+    =====================================================================
+    "
+}
 
 
 # remap prefix to 'C-a'
